[gd_scene load_steps=5 format=3 uid="uid://cqypn2n1j0p6t"]

[ext_resource type="Script" path="res://Labs/Scenes/Attack Room/weapon.gd" id="1_w7m45"]
[ext_resource type="Texture2D" uid="uid://cpsi8aqw3mfvm" path="res://Labs/Assets/6. Weapons/god_sword_1.png" id="2_5ypcx"]
[ext_resource type="AnimationLibrary" uid="uid://cw1ftgq7evm33" path="res://animations/2D Updated/2D Sword Movement.res" id="3_cju3m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n7lfi"]
radius = 5.71105
height = 21.4896

[node name="Weapon" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
rotation = 3.14159
script = ExtResource("1_w7m45")

[node name="WeaponSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1.38265, 15)
texture = ExtResource("2_5ypcx")
offset = Vector2(1.38266, 0)
region_enabled = true
region_rect = Rect2(0, 36, 14, 24)

[node name="WeaponAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../WeaponSprite")
libraries = {
"": ExtResource("3_cju3m")
}

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(1.0252e-05, 3)
rotation = -3.14159
collision_layer = 2
collision_mask = 8195

[node name="CollisionShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1.00004, -15)
rotation = -0.311607
shape = SubResource("CapsuleShape2D_n7lfi")

[connection signal="attacked" from="." to="." method="_on_attacked"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
